# flet_shareplus

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: FletSharePlus.md  index.md
examples/flet_share_plus_example/: pyproject.toml
examples/flet_share_plus_example/src/: main.py
src/flet_share_plus/: flet_share_plus.py
src/flet_share_plus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flutter/flet_share_plus/: pubspec.yaml
src/flutter/flet_share_plus/lib/: flet_share_plus.dart
src/flutter/flet_share_plus/lib/src/: create_control.dart
